contact form happening

--- a/about.html
+++ b/about.html
@@ -17,6 +17,8 @@
     <!-- front awesome -->
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
+    <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16" />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -95,13 +97,13 @@
 				  <i class="fa fa-headphones fa-stack-1x"></i>
 				</span>
 			</a>
-			<a href="live.html#gallery" target="_blank">
+<!-- 			<a href="live.html#gallery" target="_blank">
 				<span class="fa-stack fa-lg">
 				  <i class="fa fa-square-o fa-stack-2x"></i>
 				  <i class="fa fa-camera-retro fa-stack-1x"></i>
 				</span>
 			</a>
-		</div>
+ -->		</div>
 	</div>
             <div class="row page-topper">
             <div class="col-sm-6 hidden-xs">
@@ -132,18 +134,18 @@
 </div>
     </section>
     <section id="band">
-             <div class="container">
+             <div class="container band">
         <!-- Team Members Row -->
         <div class="row">
             <h2 id="band">The Band</h2>
-            <div class="col-xs-12 col-sm-6 text-center">
+            <div class="col-xs-10 col-offset-1 col-sm-5 col-offset-1 text-center">
                 <img class="img-circle img-responsive center-block" src="img/band/sumy.jpg" alt="Sümeyra's in a cool pose">
                 <h3>Sümeyra <br>
                     <small>Singer, Guitar, Keys</small>
                 </h3>
                 <p>Prior to Everdeen, singer Sümeyra had already established a career as a solo artist, which included the release of an album entitled “THOUGHTS” and a tour throughout southern Germany in 2010</p>
             </div>
-            <div class="col-xs-12 col-sm-6 text-center">
+            <div class="col-xs-10 col-offset-1 col-sm-5 col-offset-1 text-center">
                 <img class="img-circle img-responsive center-block" src="img/band/ian.jpg" alt="Ian in a cool pose">
                 <h3>Ian Stahl<br>
                     <small>Guitar, Keys</small>
@@ -152,21 +154,21 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-xs-12 col-sm-4 text-center">
+            <div class="col-xs-10 col-offset-1 col-sm-3 col-offset-1 text-center">
                 <img class="img-circle img-responsive center-block" src="img/band/john.jpg" alt="John in a cool pose">
                 <h3>John Williamson <br>
                     <small>Drums, Cymbals</small>
                 </h3>
                 <p>John is really cool and wants you to know this about himself.  Its really important that you know this thing also.  Also this.  And this.  Awesome!</p>
             </div>
-            <div class="col-xs-12 col-sm-4 text-center">
+            <div class="col-xs-10 col-offset-1 col-sm-3 col-offset-1 text-center">
                 <img class="img-circle img-responsive center-block" src="img/band/russell.jpg" alt="Russell in a cool pose">
                 <h3>Russell Snyder <br>
                     <small>Bass</small>
                 </h3>
                 <p>Russell plays the bass.  He also does <a href="http//:russellsnyder.io" target="_blank">webdesign</a>.  Boom.</p>
             </div>
-            <div class="col-xs-12 col-sm-4 text-center">
+            <div class="col-xs-10 col-offset-1 col-sm-3 col-offset-1 text-center">
                 <img class="img-circle img-responsive center-block" src="img/band/halina.jpg" alt="Halina">
                 <h3>Halina Stevens<br>
                     <small>Cello</small>
