--- a/hear.html
+++ b/hear.html
@@ -17,6 +17,8 @@
     <!-- front awesome -->
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
+    <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16" />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -31,47 +33,6 @@
 
 <body>
 <div class="myApp hear">
-
-    	<div class="row">
-		<div class="social col-xs-12 col-xs-offset-0 col-sm-2 col-xs-offset-10">
-			<a href="https://twitter.com/everdeentheband" target="_blank">
-				<span class="fa-stack fa-lg">
-				  <i class="fa fa-square-o fa-stack-2x"></i>
-				  <i class="fa fa-twitter fa-stack-1x"></i>
-				</span>
-			</a>
-			<a href="https://soundcloud.com/everdeenmusic" target="_blank">
-				<span class="fa-stack fa-lg">
-				  <i class="fa fa-square-o fa-stack-2x"></i>
-				  <i class="fa fa-soundcloud fa-stack-1x"></i>
-				</span>
-			</a>
-			<a href="https://www.facebook.com/everdeenmusic" target="_blank">
-				<span class="fa-stack fa-lg">
-				  <i class="fa fa-square-o fa-stack-2x"></i>
-				  <i class="fa fa-facebook fa-stack-1x"></i>
-				</span>
-			</a>
-			<a href="https://www.youtube.com/watch?v=JTCtzpQs08c&feature=youtu.be" target="_blank">
-				<span class="fa-stack fa-lg">
-				  <i class="fa fa-square-o fa-stack-2x"></i>
-				  <i class="fa fa-youtube fa-stack-1x"></i>
-				</span>
-			</a>
-			<a href="https://everdeenmusic.bandcamp.com/releases" target="_blank">
-				<span class="fa-stack fa-lg">
-				  <i class="fa fa-square-o fa-stack-2x"></i>
-				  <i class="fa fa-headphones fa-stack-1x"></i>
-				</span>
-			</a>
-			<a href="live.html#gallery" target="_blank">
-				<span class="fa-stack fa-lg">
-				  <i class="fa fa-square-o fa-stack-2x"></i>
-				  <i class="fa fa-camera-retro fa-stack-1x"></i>
-				</span>
-			</a>
-		</div>
-	</div>
 
     <div class="container-fluid">
   <nav class="navbar navbar-fixed-bottom" role="navigation">
@@ -104,12 +65,58 @@
     </div><!-- /.navbar-collapse -->
   </nav>
 </div><!-- /.container -->
+    	<div class="row">
+		<div class="social col-xs-12 col-xs-offset-0 col-sm-2 col-xs-offset-10">
+			<a href="https://twitter.com/everdeentheband" target="_blank">
+				<span class="fa-stack fa-lg">
+				  <i class="fa fa-square-o fa-stack-2x"></i>
+				  <i class="fa fa-twitter fa-stack-1x"></i>
+				</span>
+			</a>
+			<a href="https://soundcloud.com/everdeenmusic" target="_blank">
+				<span class="fa-stack fa-lg">
+				  <i class="fa fa-square-o fa-stack-2x"></i>
+				  <i class="fa fa-soundcloud fa-stack-1x"></i>
+				</span>
+			</a>
+			<a href="https://www.facebook.com/everdeenmusic" target="_blank">
+				<span class="fa-stack fa-lg">
+				  <i class="fa fa-square-o fa-stack-2x"></i>
+				  <i class="fa fa-facebook fa-stack-1x"></i>
+				</span>
+			</a>
+			<a href="https://www.youtube.com/watch?v=JTCtzpQs08c&feature=youtu.be" target="_blank">
+				<span class="fa-stack fa-lg">
+				  <i class="fa fa-square-o fa-stack-2x"></i>
+				  <i class="fa fa-youtube fa-stack-1x"></i>
+				</span>
+			</a>
+			<a href="https://everdeenmusic.bandcamp.com/releases" target="_blank">
+				<span class="fa-stack fa-lg">
+				  <i class="fa fa-square-o fa-stack-2x"></i>
+				  <i class="fa fa-headphones fa-stack-1x"></i>
+				</span>
+			</a>
+<!-- 			<a href="live.html#gallery" target="_blank">
+				<span class="fa-stack fa-lg">
+				  <i class="fa fa-square-o fa-stack-2x"></i>
+				  <i class="fa fa-camera-retro fa-stack-1x"></i>
+				</span>
+			</a>
+ -->		</div>
+	</div>
+            <div class="row page-topper">
+            <div class="col-sm-6 hidden-xs">
+                <h1 class="band-name"><a href="index.html"><strong>Ever</strong>deen</a></h1>
+            </div>
+        </div>
 
 
     <div class="container">
 
-    <h1 class="page-header">Our Sound<br class="visible-xs visible-sm"> <small>Our Music</small></h1>
-                <p>We combine a wide range of sounds to bring you our unique style.  We are always working on new material so check back often.</p>
+    <h1 class="">Our Sound<br class="visible-xs visible-sm"> <small>Our Music</small></h1>
+                <p class="col-xs-10">We combine a wide range of sounds to bring you our unique style.  We are always working on new material so check back often.</p>
+                <div class="clearfix"></div>
 
     <section>
     <div class="container">
@@ -141,7 +148,7 @@
                 <div class="col-xs-offset-1 col-xs-10 col-sm-offset-0 col-sm-7 img-responive">
                 <iframe width="100%" height="315" src="https://www.youtube.com/embed/JTCtzpQs08c" frameborder="0" allowfullscreen></iframe>
                 </div>
-                <div class="col-xs-offset-1 col-xs-10 col-sm-offset-0 col-sm-5">
+                <div class="col-xs-offset-1 col-xs-10 col-sm-offset-0 col-sm-3">
                     <h3>Helpless | Unplugged</h3>
                     <p>Live performance of the original song "Helpless" by the band Everdeen from Stuttgart, Germany</p>
                 </div>
@@ -159,8 +166,12 @@
             </div>
     </div>
 </section>
+<br><br>
 
-        <!-- Footer -->
+
+
+    </div><!-- /.container -->
+
                 <footer>
             <div class="row">
                 <div class="text-center col-sm-6">
@@ -175,9 +186,6 @@
 
 
         </footer>
-
-
-    </div><!-- /.container -->
 
             <!-- jQuery -->
     <script src="js/jquery.js"></script>
