--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <!-- front awesome -->
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
+    <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16" />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -44,7 +46,7 @@
 
     <!-- Page Content -->
 
-                <div class="row page-topper">
+                <div class="row page-topper-land">
             <div class="col-sm-6 hidden-xs">
                 <h1 class="band-name"><a href="index.html"><strong>Ever</strong>deen</a></h1>
             </div>
@@ -89,13 +91,13 @@
 				  <i class="fa fa-headphones fa-stack-1x"></i>
 				</span>
 			</a>
-			<a href="live.html#gallery" target="_blank">
+<!-- 			<a href="live.html#gallery" target="_blank">
 				<span class="fa-stack fa-lg">
 				  <i class="fa fa-square-o fa-stack-2x"></i>
 				  <i class="fa fa-camera-retro fa-stack-1x"></i>
 				</span>
 			</a>
-		</div>
+ -->		</div>
 	</div>
 
     <div class="container">
