--- a/see.html
+++ b/see.html
@@ -17,6 +17,8 @@
     <!-- front awesome -->
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
+    <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16" />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -40,47 +42,6 @@
 }(document, 'script', 'facebook-jssdk'));</script>
 
 <div class="myApp see">
-
-    	<div class="row">
-		<div class="social col-xs-12 col-xs-offset-0 col-sm-2 col-xs-offset-10">
-			<a href="https://twitter.com/everdeentheband" target="_blank">
-				<span class="fa-stack fa-lg">
-				  <i class="fa fa-square-o fa-stack-2x"></i>
-				  <i class="fa fa-twitter fa-stack-1x"></i>
-				</span>
-			</a>
-			<a href="https://soundcloud.com/everdeenmusic" target="_blank">
-				<span class="fa-stack fa-lg">
-				  <i class="fa fa-square-o fa-stack-2x"></i>
-				  <i class="fa fa-soundcloud fa-stack-1x"></i>
-				</span>
-			</a>
-			<a href="https://www.facebook.com/everdeenmusic" target="_blank">
-				<span class="fa-stack fa-lg">
-				  <i class="fa fa-square-o fa-stack-2x"></i>
-				  <i class="fa fa-facebook fa-stack-1x"></i>
-				</span>
-			</a>
-			<a href="https://www.youtube.com/watch?v=JTCtzpQs08c&feature=youtu.be" target="_blank">
-				<span class="fa-stack fa-lg">
-				  <i class="fa fa-square-o fa-stack-2x"></i>
-				  <i class="fa fa-youtube fa-stack-1x"></i>
-				</span>
-			</a>
-			<a href="https://everdeenmusic.bandcamp.com/releases" target="_blank">
-				<span class="fa-stack fa-lg">
-				  <i class="fa fa-square-o fa-stack-2x"></i>
-				  <i class="fa fa-headphones fa-stack-1x"></i>
-				</span>
-			</a>
-			<a href="live.html#gallery" target="_blank">
-				<span class="fa-stack fa-lg">
-				  <i class="fa fa-square-o fa-stack-2x"></i>
-				  <i class="fa fa-camera-retro fa-stack-1x"></i>
-				</span>
-			</a>
-		</div>
-	</div>
 
     <div class="container-fluid">
   <nav class="navbar navbar-fixed-bottom" role="navigation">
@@ -113,6 +74,51 @@
     </div><!-- /.navbar-collapse -->
   </nav>
 </div><!-- /.container -->
+    	<div class="row">
+		<div class="social col-xs-12 col-xs-offset-0 col-sm-2 col-xs-offset-10">
+			<a href="https://twitter.com/everdeentheband" target="_blank">
+				<span class="fa-stack fa-lg">
+				  <i class="fa fa-square-o fa-stack-2x"></i>
+				  <i class="fa fa-twitter fa-stack-1x"></i>
+				</span>
+			</a>
+			<a href="https://soundcloud.com/everdeenmusic" target="_blank">
+				<span class="fa-stack fa-lg">
+				  <i class="fa fa-square-o fa-stack-2x"></i>
+				  <i class="fa fa-soundcloud fa-stack-1x"></i>
+				</span>
+			</a>
+			<a href="https://www.facebook.com/everdeenmusic" target="_blank">
+				<span class="fa-stack fa-lg">
+				  <i class="fa fa-square-o fa-stack-2x"></i>
+				  <i class="fa fa-facebook fa-stack-1x"></i>
+				</span>
+			</a>
+			<a href="https://www.youtube.com/watch?v=JTCtzpQs08c&feature=youtu.be" target="_blank">
+				<span class="fa-stack fa-lg">
+				  <i class="fa fa-square-o fa-stack-2x"></i>
+				  <i class="fa fa-youtube fa-stack-1x"></i>
+				</span>
+			</a>
+			<a href="https://everdeenmusic.bandcamp.com/releases" target="_blank">
+				<span class="fa-stack fa-lg">
+				  <i class="fa fa-square-o fa-stack-2x"></i>
+				  <i class="fa fa-headphones fa-stack-1x"></i>
+				</span>
+			</a>
+<!-- 			<a href="live.html#gallery" target="_blank">
+				<span class="fa-stack fa-lg">
+				  <i class="fa fa-square-o fa-stack-2x"></i>
+				  <i class="fa fa-camera-retro fa-stack-1x"></i>
+				</span>
+			</a>
+ -->		</div>
+	</div>
+            <div class="row page-topper">
+            <div class="col-sm-6 hidden-xs">
+                <h1 class="band-name"><a href="index.html"><strong>Ever</strong>deen</a></h1>
+            </div>
+        </div>
 
 
     <!-- Page Content -->
@@ -120,72 +126,111 @@
 
         <!-- Introduction Row -->
         <div class="row">
-            <div class="col-lg-10">
+            <div class="col-sm-9">
                 <h1 class="page-header">We Get Around
-                    <small> Take a look</small>
+                    <small></small>
                 </h1>
-                <p>Hello?  na yeah?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, explicabo dolores ipsam aliquam inventore corrupti eveniet quisquam quod totam laudantium repudiandae obcaecati ea consectetur debitis velit facere nisi expedita vel?</p>
+                <p>We have so many gigs coming up it's literally crazy crazy</p>
+
+        <div class="row schedule">
+    <a id="schedule"> <h2>Tour Schedule</h2></a> 
+    <div class="col-sm-6">
+        <ul class="list-group"> <a class="" role="button" data-toggle="collapse" href="#September" aria-expanded="false" aria-controls="collapseExample"><h3>September | 2015<i class="pull-right fa fa-arrow-circle-down">&nbsp;&nbsp;&nbsp;&nbsp;</i></h3></a>
+            <div class="collapse" id="September">
+                <li class="list-group-item">10th : <a href="http://google.com">Boston</a></li>
+                <li class="list-group-item">12th : <a href="http://google.com">Stuggi</a></li>
+                <li class="list-group-item">23rd : <a href="http://google.com">Lubu</a></li>
+                <li class="list-group-item">29th : <a href="http://google.com">Doesn't Exist</a></li>
+            </div>
+        </ul>
+    </div>
+    <div class="col-sm-6">
+        <ul class="list-group"> <a class="" role="button" data-toggle="collapse" href="#October" aria-expanded="false" aria-controls="collapseExample"><h3>October | 2015<i class="pull-right fa fa-arrow-circle-down">&nbsp;&nbsp;&nbsp;&nbsp;</i></h3> </a>
+            <div class="collapse" id="October">
+                <li class="list-group-item">10th : <a href="http://google.com">Boston</a></li>
+                <li class="list-group-item">11th : <a href="http://google.com">Boston</a></li>
+                <li class="list-group-item">12th : <a href="http://google.com">Stuggi</a></li>
+                <li class="list-group-item">23rd : <a href="http://google.com">Lubu</a></li>
+                <li class="list-group-item">29th : <a href="http://google.com">Doesn't Exist</a></li>
+            </div>
+        </ul>
+    </div>
+    <div class="col-sm-6">
+        <ul class="list-group"> <a class="" role="button" data-toggle="collapse" href="#November" aria-expanded="false" aria-controls="collapseExample"><h3>November | 2015<i class="pull-right fa fa-arrow-circle-down">&nbsp;&nbsp;&nbsp;&nbsp;</i></h3></a>
+            <div class="collapse" id="November">
+                <li class="list-group-item">10th : <a href="http://google.com">Boston</a></li>
+                <li class="list-group-item">12th : <a href="http://google.com">Stuggi</a></li>
+                <li class="list-group-item">23rd : <a href="http://google.com">Lubu</a></li>
+                <li class="list-group-item">29th : <a href="http://google.com">Doesn't Exist</a></li>
+            </div>
+        </ul>
+    </div>
+    <div class="col-sm-6">
+        <ul class="list-group"> <a class="" role="button" data-toggle="collapse" href="#December" aria-expanded="false" aria-controls="collapseExample"><h3>December | 2015<i class="pull-right fa fa-arrow-circle-down">&nbsp;&nbsp;&nbsp;&nbsp;</i></h3></a>
+            <div class="collapse" id="December">
+                <li class="list-group-item">10th : <a href="http://google.com">Boston</a></li>
+                <li class="list-group-item">11th : <a href="http://google.com">Boston</a></li>
+                <li class="list-group-item">12th : <a href="http://google.com">Stuggi</a></li>
+                <li class="list-group-item">23rd : <a href="http://google.com">Lubu</a></li>
+                <li class="list-group-item">29th : <a href="http://google.com">Doesn't Exist</a></li>
+            </div>
+        </ul>
+    </div>                
+</div>
             </div>
         </div>
-
+    </div>
+    <div class="container">
     <section id="photo-gallery">
     <div class="container">
         <div class="row">
         <h1 class="col-lg-10">Photos</h1>
         </div>        
         <div class="row">
-            <article>
-                <h2>Photo Shoot <small>July 2015</small></h2>
-                <div class="col-md-8">
-                    <ul class="photos gallery-parent">
-                        <li>
-                            <a href="img/BandPhoto1.png" 
-                                data-title="Image One" 
-                                data-footer="This is image 1" 
-                                title="This is image one"
-                                    data-toggle="lightbox" data-gallery="mygallery" data-parent=".gallery-parent" data-hover="tooltip" data-placement="top"                                    >
-                            <img src="img/BandPhoto1.png" class="img-thumbnail"></a>
-                        </li>
-                        <li>
-                            <a href="img/BandPhoto2.png" 
-                                data-title="Image Two" 
-                                data-footer="This is image 2" 
-                                title="This is image one"
-                                    data-toggle="lightbox" data-gallery="mygallery" data-parent=".gallery-parent" data-hover="tooltip" data-placement="top"                                    >
-                            <img src="img/BandPhoto2.png" class="img-thumbnail"></a>
-                        </li>
-                        <li>
-                            <a href="img/BandPhoto3.png" 
-                                data-title="Image Three" 
-                                data-footer="This is image 3" 
-                                title="This is image one"
-                                    data-toggle="lightbox" data-gallery="mygallery" data-parent=".gallery-parent" data-hover="tooltip" data-placement="top"                                    >
-                            <img src="img/BandPhoto3.png" class="img-thumbnail"></a>
-                        </li>
-                        <li>
-                            <a href="img/BandPhoto4.png" 
-                                data-title="Image Four" 
-                                data-footer="This is image 4" 
-                                title="This is image four"
-                                    data-toggle="lightbox" data-gallery="mygallery" data-parent=".gallery-parent" data-hover="tooltip" data-placement="top"                                    >
-                            <img src="img/BandPhoto4.png" class="img-thumbnail"></a>
-                        </li>
-                    </ul>
-                </div><!-- col-md-8 end -->
-            </article>
-            <aside>
-                <div class="col-md-4">
-                    <h3>Facebook photos</h3>
-                    <div class="fb-page" data-href="https://www.facebook.com/everdeenmusic" data-width="100%" data-height="300px;" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="true" data-show-posts="true">
-                        <div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/everdeenmusic"><a href="https://www.facebook.com/everdeenmusic"></a></blockquote></div>
-                    </div>
-                </div>
-            </aside>
-        </div> <!-- end row -->
-        <div class="row">
+    <article>
+        <h2>Photo Shoot <small>July 2015</small></h2>
+        <div class="col-md-10">
+            <ul class="photos gallery-parent">
+                <li>
+                    <a href="img/BandPhoto1.png" 
+                    data-title="Image One" 
+                    data-footer="This is image 1" 
+                    title="This is image one"
+                    data-toggle="lightbox" data-gallery="mygallery" data-parent=".gallery-parent" data-hover="tooltip" data-placement="top"                    >
+                    <img src="img/BandPhoto1.png" class="img-thumbnail"></a>
+                </li>
+                <li>
+                    <a href="img/BandPhoto2.png" 
+                    data-title="Image Two" 
+                    data-footer="This is image 2" 
+                    title="This is image one"
+                    data-toggle="lightbox" data-gallery="mygallery" data-parent=".gallery-parent" data-hover="tooltip" data-placement="top"                    >
+                    <img src="img/BandPhoto2.png" class="img-thumbnail"></a>
+                </li>
+                <li>
+                    <a href="img/BandPhoto3.png" 
+                    data-title="Image Three" 
+                    data-footer="This is image 3" 
+                    title="This is image one"
+                    data-toggle="lightbox" data-gallery="mygallery" data-parent=".gallery-parent" data-hover="tooltip" data-placement="top"                    >
+                    <img src="img/BandPhoto3.png" class="img-thumbnail"></a>
+                </li>
+                <li>
+                    <a href="img/BandPhoto4.png" 
+                    data-title="Image Four" 
+                    data-footer="This is image 4" 
+                    title="This is image four"
+                    data-toggle="lightbox" data-gallery="mygallery" data-parent=".gallery-parent" data-hover="tooltip" data-placement="top"                    >
+                    <img src="img/BandPhoto4.png" class="img-thumbnail"></a>
+                </li>
+            </ul>
+        </div><!-- col-md-8 end -->
+    </article>
+</div> <!-- end row -->
+<div class="clearfix"></div>                <div class="row">
             <article>
            <h2>Live Shows<small> Feel the Energy</small></h2>
-                <div class="col-md-8">
+                <div class="col-md-10">
                     <ul class="photos gallery-parent">
                         <li>
                             <a href="img/live1.jpg" 
@@ -221,14 +266,12 @@
                         </li>
                     </ul>
                 </div><!-- col-md-8 end -->
-                <aside>
-                </aside>
             </article>
         </div> <!-- end row -->
-        <div class="row">
+        <div class="clearfix"></div>                <div class="row">
             <article>
            <h2>Miscellaneous<small> What are these?</small></h2>
-                <div class="col-md-8">
+                <div class="col-md-10">
                 <ul class="photos gallery-parent">
                         <li>
                             <a href="img/cover.jpg" 
@@ -288,16 +331,12 @@
                         </li>
                     </ul>
                 </div><!-- col-md-8 end -->
-                <aside>
-                </aside>
-
             </article>
         </div> <!-- end row -->
+        <div class="clearfix"></div></section>
 
-</section>
 
-
-        
+    </div>    
 
         <hr>
 
@@ -318,7 +357,7 @@
         </footer>
 
 
-    </div><!-- /.container -->
+</div><!-- /.container -->
 
             <!-- jQuery -->
     <script src="js/jquery.js"></script>
@@ -336,8 +375,6 @@
     })
         </script>
 
-
-</div>
 </body>
 
 </html>
