--- a/support.html
+++ b/support.html
@@ -17,6 +17,8 @@
     <!-- front awesome -->
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
+    <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16" />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -25,53 +27,12 @@
     <![endif]-->
     <!--     Pull this out for later SEO-->    
     <meta name="description" content="Everdeen is a music group based in Stuttgart, Germany.">
-    <title>The Band</title>
+    <title>Everdeen | Support</title>
 
 </head>
 
 <body>
 <div class="myApp support">
-
-    	<div class="row">
-		<div class="social col-xs-12 col-xs-offset-0 col-sm-2 col-xs-offset-10">
-			<a href="https://twitter.com/everdeentheband" target="_blank">
-				<span class="fa-stack fa-lg">
-				  <i class="fa fa-square-o fa-stack-2x"></i>
-				  <i class="fa fa-twitter fa-stack-1x"></i>
-				</span>
-			</a>
-			<a href="https://soundcloud.com/everdeenmusic" target="_blank">
-				<span class="fa-stack fa-lg">
-				  <i class="fa fa-square-o fa-stack-2x"></i>
-				  <i class="fa fa-soundcloud fa-stack-1x"></i>
-				</span>
-			</a>
-			<a href="https://www.facebook.com/everdeenmusic" target="_blank">
-				<span class="fa-stack fa-lg">
-				  <i class="fa fa-square-o fa-stack-2x"></i>
-				  <i class="fa fa-facebook fa-stack-1x"></i>
-				</span>
-			</a>
-			<a href="https://www.youtube.com/watch?v=JTCtzpQs08c&feature=youtu.be" target="_blank">
-				<span class="fa-stack fa-lg">
-				  <i class="fa fa-square-o fa-stack-2x"></i>
-				  <i class="fa fa-youtube fa-stack-1x"></i>
-				</span>
-			</a>
-			<a href="https://everdeenmusic.bandcamp.com/releases" target="_blank">
-				<span class="fa-stack fa-lg">
-				  <i class="fa fa-square-o fa-stack-2x"></i>
-				  <i class="fa fa-headphones fa-stack-1x"></i>
-				</span>
-			</a>
-			<a href="live.html#gallery" target="_blank">
-				<span class="fa-stack fa-lg">
-				  <i class="fa fa-square-o fa-stack-2x"></i>
-				  <i class="fa fa-camera-retro fa-stack-1x"></i>
-				</span>
-			</a>
-		</div>
-	</div>
 
     <div class="container-fluid">
   <nav class="navbar navbar-fixed-bottom" role="navigation">
@@ -104,6 +65,51 @@
     </div><!-- /.navbar-collapse -->
   </nav>
 </div><!-- /.container -->
+    	<div class="row">
+		<div class="social col-xs-12 col-xs-offset-0 col-sm-2 col-xs-offset-10">
+			<a href="https://twitter.com/everdeentheband" target="_blank">
+				<span class="fa-stack fa-lg">
+				  <i class="fa fa-square-o fa-stack-2x"></i>
+				  <i class="fa fa-twitter fa-stack-1x"></i>
+				</span>
+			</a>
+			<a href="https://soundcloud.com/everdeenmusic" target="_blank">
+				<span class="fa-stack fa-lg">
+				  <i class="fa fa-square-o fa-stack-2x"></i>
+				  <i class="fa fa-soundcloud fa-stack-1x"></i>
+				</span>
+			</a>
+			<a href="https://www.facebook.com/everdeenmusic" target="_blank">
+				<span class="fa-stack fa-lg">
+				  <i class="fa fa-square-o fa-stack-2x"></i>
+				  <i class="fa fa-facebook fa-stack-1x"></i>
+				</span>
+			</a>
+			<a href="https://www.youtube.com/watch?v=JTCtzpQs08c&feature=youtu.be" target="_blank">
+				<span class="fa-stack fa-lg">
+				  <i class="fa fa-square-o fa-stack-2x"></i>
+				  <i class="fa fa-youtube fa-stack-1x"></i>
+				</span>
+			</a>
+			<a href="https://everdeenmusic.bandcamp.com/releases" target="_blank">
+				<span class="fa-stack fa-lg">
+				  <i class="fa fa-square-o fa-stack-2x"></i>
+				  <i class="fa fa-headphones fa-stack-1x"></i>
+				</span>
+			</a>
+<!-- 			<a href="live.html#gallery" target="_blank">
+				<span class="fa-stack fa-lg">
+				  <i class="fa fa-square-o fa-stack-2x"></i>
+				  <i class="fa fa-camera-retro fa-stack-1x"></i>
+				</span>
+			</a>
+ -->		</div>
+	</div>
+            <div class="row page-topper">
+            <div class="col-sm-6 hidden-xs">
+                <h1 class="band-name"><a href="index.html"><strong>Ever</strong>deen</a></h1>
+            </div>
+        </div>
 
 
     <!-- Page Content -->
@@ -111,17 +117,107 @@
 
         <!-- Introduction Row -->
         <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header">Buy our Merch
-                    <small>Support our Art</small>
+            <div class="col-xs-10">
+                <h1 class="page-header">Support our Art <br class="visible-sm visible-xs">
                 </h1>
-                <p>Coming soon!!</p>
+                <p>You can help us make music when you <a href="see.html#schedule">See us live</a>, when you <a href="http://www.cdbaby.com/cd/everdeen1" target="_blank">purchase a cd</a> or <a href="https://everdeenmusic.bandcamp.com/releases">digital download</a>, or by contrinbuting to our Kickstarter Campaign <b>(Coming Soon)</b> </p>
             </div>
         </div>
+    </div>
 
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-10 col-xs-offset-1">
+                <iframe style="border: 0; 100%; height: 470px;" src="https://bandcamp.com/EmbeddedPlayer/album=2350462305/size=large/bgcol=333333/linkcol=e99708/tracklist=false/transparent=true/" seamless><a href="http://everdeenmusic.bandcamp.com/album/perfect-lines">Perfect Lines by Everdeen</a></iframe>
+            </div>
+        </div>
+    </div>
+    <div class="clearfix"></div>
 
+    <hr>
+    <div class="container">
+            <div class="row schedule">
+    <a id="schedule"> <h2>Tour Schedule</h2></a> 
+    <div class="col-sm-6">
+        <ul class="list-group"> <a class="" role="button" data-toggle="collapse" href="#September" aria-expanded="false" aria-controls="collapseExample"><h3>September | 2015<i class="pull-right fa fa-arrow-circle-down">&nbsp;&nbsp;&nbsp;&nbsp;</i></h3></a>
+            <div class="collapse" id="September">
+                <li class="list-group-item">10th : <a href="http://google.com">Boston</a></li>
+                <li class="list-group-item">12th : <a href="http://google.com">Stuggi</a></li>
+                <li class="list-group-item">23rd : <a href="http://google.com">Lubu</a></li>
+                <li class="list-group-item">29th : <a href="http://google.com">Doesn't Exist</a></li>
+            </div>
+        </ul>
+    </div>
+    <div class="col-sm-6">
+        <ul class="list-group"> <a class="" role="button" data-toggle="collapse" href="#October" aria-expanded="false" aria-controls="collapseExample"><h3>October | 2015<i class="pull-right fa fa-arrow-circle-down">&nbsp;&nbsp;&nbsp;&nbsp;</i></h3> </a>
+            <div class="collapse" id="October">
+                <li class="list-group-item">10th : <a href="http://google.com">Boston</a></li>
+                <li class="list-group-item">11th : <a href="http://google.com">Boston</a></li>
+                <li class="list-group-item">12th : <a href="http://google.com">Stuggi</a></li>
+                <li class="list-group-item">23rd : <a href="http://google.com">Lubu</a></li>
+                <li class="list-group-item">29th : <a href="http://google.com">Doesn't Exist</a></li>
+            </div>
+        </ul>
+    </div>
+    <div class="col-sm-6">
+        <ul class="list-group"> <a class="" role="button" data-toggle="collapse" href="#November" aria-expanded="false" aria-controls="collapseExample"><h3>November | 2015<i class="pull-right fa fa-arrow-circle-down">&nbsp;&nbsp;&nbsp;&nbsp;</i></h3></a>
+            <div class="collapse" id="November">
+                <li class="list-group-item">10th : <a href="http://google.com">Boston</a></li>
+                <li class="list-group-item">12th : <a href="http://google.com">Stuggi</a></li>
+                <li class="list-group-item">23rd : <a href="http://google.com">Lubu</a></li>
+                <li class="list-group-item">29th : <a href="http://google.com">Doesn't Exist</a></li>
+            </div>
+        </ul>
+    </div>
+    <div class="col-sm-6">
+        <ul class="list-group"> <a class="" role="button" data-toggle="collapse" href="#December" aria-expanded="false" aria-controls="collapseExample"><h3>December | 2015<i class="pull-right fa fa-arrow-circle-down">&nbsp;&nbsp;&nbsp;&nbsp;</i></h3></a>
+            <div class="collapse" id="December">
+                <li class="list-group-item">10th : <a href="http://google.com">Boston</a></li>
+                <li class="list-group-item">11th : <a href="http://google.com">Boston</a></li>
+                <li class="list-group-item">12th : <a href="http://google.com">Stuggi</a></li>
+                <li class="list-group-item">23rd : <a href="http://google.com">Lubu</a></li>
+                <li class="list-group-item">29th : <a href="http://google.com">Doesn't Exist</a></li>
+            </div>
+        </ul>
+    </div>                
+</div>    </div>
+    <hr>
 
-        <hr>
+    <div class="container">
+        <div class="row">
+            <div class="panel panel-info col-xs-10 col-xs-offset-1">
+                      <div class="panel-heading">
+                            <h3 class="panel-title text-center">Kick Starter Goals:</h3>
+                      </div>
+                      <div class="panel-body">
+                            <p>We really need to reach our goals so that we can keep making the music you love.  Would you like to be the one who helped us make our dreams come true?</p>
+                            <div class="progress">
+                                  <div class="progress-bar progress-bar-success" style="width: 20%">
+                                <span class="sr-only">20% Complete (great job)</span> <i class="fa fa-smile-o fa-lg"></i> <i class="fa fa-smile-o fa-lg"></i> <i class="fa fa-smile-o fa-lg"></i>
+                              </div>
+                                <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+                                <span class="sr-only">80% Complete</span> Just 1,115 left!
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-sm-10 col-sm-offset-1">
+                                    <div class="panel panel-danger">
+                                              <div class="panel-heading">
+                                                    <h3 class="panel-title">Only 35 Days left &nbsp;&nbsp;<i class="fa fa-spinner fa-spin"></i></h3> 
+                                              </div>
+                                    </div>
+                                </div>
+                                <br>
+                                <div class="col-sm-4 col-sm-offset-5">
+                                    <a href="https://www.kickstarter.com"><button type="button" class="btn btn-success">Chip in &nbsp; &nbsp; <i class="fa fa-play fa-lg"></i></button></a>
+                                </div>
+                            </div>
+                      </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
         <!-- Footer -->
                 <footer>
@@ -140,7 +236,6 @@
         </footer>
 
 
-    </div><!-- /.container -->
 
             <!-- jQuery -->
     <script src="js/jquery.js"></script>
