--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,8 @@
     <!-- front awesome -->
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
+    <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16" />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -25,53 +27,49 @@
     <![endif]-->
     <!--     Pull this out for later SEO-->    
     <meta name="description" content="Everdeen is a music group based in Stuttgart, Germany.">
-    <title>The Band</title>
+    <title>Everdeen | Conact</title>
 
 </head>
 
 <body>
 <div class="myApp contact">
 
-    	<div class="row">
-		<div class="social col-xs-12 col-xs-offset-0 col-sm-2 col-xs-offset-10">
-			<a href="https://twitter.com/everdeentheband" target="_blank">
-				<span class="fa-stack fa-lg">
-				  <i class="fa fa-square-o fa-stack-2x"></i>
-				  <i class="fa fa-twitter fa-stack-1x"></i>
-				</span>
-			</a>
-			<a href="https://soundcloud.com/everdeenmusic" target="_blank">
-				<span class="fa-stack fa-lg">
-				  <i class="fa fa-square-o fa-stack-2x"></i>
-				  <i class="fa fa-soundcloud fa-stack-1x"></i>
-				</span>
-			</a>
-			<a href="https://www.facebook.com/everdeenmusic" target="_blank">
-				<span class="fa-stack fa-lg">
-				  <i class="fa fa-square-o fa-stack-2x"></i>
-				  <i class="fa fa-facebook fa-stack-1x"></i>
-				</span>
-			</a>
-			<a href="https://www.youtube.com/watch?v=JTCtzpQs08c&feature=youtu.be" target="_blank">
-				<span class="fa-stack fa-lg">
-				  <i class="fa fa-square-o fa-stack-2x"></i>
-				  <i class="fa fa-youtube fa-stack-1x"></i>
-				</span>
-			</a>
-			<a href="https://everdeenmusic.bandcamp.com/releases" target="_blank">
-				<span class="fa-stack fa-lg">
-				  <i class="fa fa-square-o fa-stack-2x"></i>
-				  <i class="fa fa-headphones fa-stack-1x"></i>
-				</span>
-			</a>
-			<a href="live.html#gallery" target="_blank">
-				<span class="fa-stack fa-lg">
-				  <i class="fa fa-square-o fa-stack-2x"></i>
-				  <i class="fa fa-camera-retro fa-stack-1x"></i>
-				</span>
-			</a>
-		</div>
-	</div>
+    <div class="container-fluid">
+  <nav class="navbar navbar-fixed-bottom" role="navigation">
+    <div class="">
+      <ul class="nav navbar-nav navbar-custom">
+        <div class="clearfix">
+          <li id="home" class="visible-xs">
+            <h1 class="band-name"><a href="index.html"><strong>Ever</strong>deen</a></h1>
+          </li>
+        </div>
+        <li id="home">
+          <a class="hidden-xs" href="index.html">Home</strong><i class="fa fa-home"></i>&nbsp;&nbsp;&nbsp;</a>
+        </li>
+        <li id="about">
+          <a href="about.html">About <i class="fa fa-list-alt"></i></a> 
+        </li>
+        <li id="hear">
+          <a href="hear.html">Hear <i class="fa fa-music"></i></a>               
+        </li>
+        <li id="see">
+          <a href="see.html">See <i class="fa fa-eye"></i><i class="fa fa-eye fa-flip-horizontal"></i></a>               
+        </li>
+        <li id="support">
+          <a href="support.html">Support <i class="fa fa-heart-o"></i></span></a>
+        </li>
+        <li id="contact">
+          <a href="contact.html">Contact <i class="fa fa-envelope-o"></i></a>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </nav>
+</div><!-- /.container -->
+            <div class="row page-topper">
+            <div class="col-sm-6 hidden-xs">
+                <h1 class="band-name"><a href="index.html"><strong>Ever</strong>deen</a></h1>
+            </div>
+        </div>
 
     <div class="container-fluid">
   <nav class="navbar navbar-fixed-bottom" role="navigation">
@@ -111,66 +109,70 @@
 
         <!-- Introduction Row -->
         <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header">We live music
-                    <small>Meet the Band</small>
+            <div class="col-sm-10 col-sm-offset-1">
+                <h1 class="page-header">Contact Us
+                <br class="visible-sm visible-xs">
+                    <small>we're ready</small>
                 </h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, explicabo dolores ipsam aliquam inventore corrupti eveniet quisquam quod totam laudantium repudiandae obcaecati ea consectetur debitis velit facere nisi expedita vel?</p>
+                <p>If you have any music opportunities you would like to speak about, please write to us using this form.  We will get back to you as soon as possible. </p>
             </div>
         </div>
+    </div>
 
-        <div class="row">
-          <div class="col-xs-12 col-md-7">
-            <div class="container">
-              <div class="row">
-                <div class="col-md-6 col-md-offset-3">
-                  <div class="well well-sm">
-                    <form class="form-horizontal" action="" method="post">
-                      <fieldset>
-                        <legend class="text-center">What's up?</legend>
+    <div class="container">
+      <div class="row">
+      <div class="col-xs-12 col-md-8 col-md-offset-2">
+          <div class="well well-sm">
+            <form class="form-horizontal" action="" method="post">
+              <fieldset>
+                <legend class="text-center">What's up?</legend>
 
-                        <!-- Name input-->
-                        <div class="form-group">
-                          <label class="col-md-3 control-label" for="name">Name</label>
-                          <div class="col-md-9">
-                            <input id="name" name="name" type="text" placeholder="Joe Cool Dude" class="form-control">
-                          </div>
-                        </div>
-
-                        <!-- Email input-->
-                        <div class="form-group">
-                          <label class="col-md-3 control-label" for="email">E-mail</label>
-                          <div class="col-md-9">
-                            <input id="email" name="email" type="text" placeholder="something@gmail.com" class="form-control">
-                          </div>
-                        </div>
-
-                        <!-- Message body -->
-                        <div class="form-group">
-                          <label class="col-md-3 control-label" for="message">Your message</label>
-                          <div class="col-md-9">
-                            <textarea class="form-control" id="message" name="message" placeholder="Thanks you for messaging us :-)" rows="5"></textarea>
-                          </div>
-                        </div>
-
-                        <!-- Form actions -->
-                        <div class="form-group">
-                          <div class="col-md-12 text-right">
-                            <button type="submit" class="btn btn-primary btn-lg"><i class="fa fa-paper-plane"></i>Send Away! </button>
-                          </div>
-                        </div>
-                      </fieldset>
-                    </form>
+                <!-- Name input-->
+                <div class="form-group">
+                  <label class="col-md-3 control-label" for="name">Name</label>
+                  <div class="col-md-9">
+                    <input id="name" name="name" type="text" placeholder="Joe Cool" class="form-control">
                   </div>
                 </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-12 col-md-5">
-            <div class="fb-comments" data-href="https://www.facebook.com/everdeenmusic" data-width="100%" data-numposts="5"></div>       
-          </div>    
-        </div><!-- end row -->
-        <hr>
+
+                <!-- Email input-->
+                <div class="form-group">
+                  <label class="col-md-3 control-label" for="email">E-mail</label>
+                  <div class="col-md-9">
+                    <input id="email" name="email" type="text" placeholder="something@gmail.com" class="form-control">
+                  </div>
+                </div>
+
+                <!-- Message body -->
+                <div class="form-group">
+                  <label class="col-md-3 control-label" for="message">Your message</label>
+                  <div class="col-md-9">
+                    <textarea class="form-control" id="message" name="message" placeholder="Thanks you for messaging us :-)" rows="5"></textarea>
+                  </div>
+                </div>
+
+                <!-- Form actions -->
+                <div class="form-group">
+                  <div class="col-md-12 text-right">
+                    <button type="submit" class="btn btn-primary btn-lg"><i class="fa fa-paper-plane"></i> &nbsp; Send Away! </button>
+                  </div>
+                </div>
+              </fieldset>
+            </form>
+          </div> <!-- end of well -->
+        </div> <!-- end of col-xs-12 -->
+      </div><!-- end row -->
+    </div> <!-- end container -->
+    <hr>
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-10 col-xs-offset-1">
+          <h2>Leave a Comment on our &nbsp; <i class="fa fa-facebook-square fa-2x"></i> &nbsp;page</h2>     
+          <div class="fb-comments" data-href="https://www.facebook.com/everdeenmusic" data-width="100%" data-numposts="5"></div>       
+        </div>    
+      </div>
+    </div><!-- /.container -->
+    <hr>
 
         <!-- Footer -->
                 <footer>
@@ -188,16 +190,13 @@
 
         </footer>
 
-
-    </div><!-- /.container -->
-
             <!-- jQuery -->
     <script src="js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
 
-</div>
+  </div>
 </body>
 
 </html>
