everything got soft and cloth

--- a/support.html
+++ b/support.html
@@ -136,6 +136,11 @@
 
     <hr>
     <div class="container">
+        <div class="row">
+            <div class="col-xs-8 col-xs-offset-2">
+                
+            </div>
+        </div>
             <div class="row schedule">
     <a id="schedule"> <h2>Tour Schedule</h2></a> 
     <div class="col-sm-6">
