tried to make the photos larger
I was not successful and I need to sleep now

--- a/see.html
+++ b/see.html
@@ -189,7 +189,7 @@
         <div class="row">
     <article>
         <h2>Photo Shoot <small>July 2015</small></h2>
-        <div class="col-md-10">
+        <div class="col-xs-12 col-md-10">
             <ul class="photos gallery-parent">
                 <li>
                     <a href="img/BandPhoto1.png" 
